--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.0.5"
+    "@astrojs/tailwind": "^3.0.1",
+    "astro": "^2.0.5",
+    "tailwindcss": "^3.0.24"
   }
 }
