--- a/package.json
+++ b/package.json
@@ -14,5 +14,14 @@
     "@astrojs/tailwind": "^3.0.1",
     "astro": "^2.0.5",
     "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^5.50.0",
+    "eslint": "^8.33.0",
+    "eslint-plugin-astro": "^0.23.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "prettier": "^2.8.3",
+    "prettier-plugin-astro": "^0.8.0",
+    "prettier-plugin-tailwindcss": "^0.2.2"
   }
 }
