--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 	},
 	"dependencies": {
 		"@astrojs/tailwind": "^3.0.1",
+		"@fontsource/karla": "^4.5.11",
+		"@fontsource/oswald": "^4.5.12",
 		"astro": "^2.0.5",
 		"tailwindcss": "^3.0.24"
 	},
