--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"eslint-plugin-jsx-a11y": "^6.7.1",
 		"prettier": "^2.8.3",
 		"prettier-plugin-astro": "^0.8.0",
-		"prettier-plugin-tailwindcss": "^0.2.2"
+		"prettier-plugin-tailwindcss": "^0.2.2",
+		"sass": "^1.58.0"
 	}
 }
