--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
 		"astro": "astro"
 	},
 	"dependencies": {
+		"@astrojs/image": "^0.14.0",
 		"@astrojs/tailwind": "^3.0.1",
 		"@fontsource/karla": "^4.5.11",
 		"@fontsource/oswald": "^4.5.12",
 		"astro": "^2.0.5",
+		"sharp": "^0.31.3",
 		"tailwindcss": "^3.0.24"
 	},
 	"devDependencies": {
