--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@astrojs/image": "^0.16.7",
+		"@astrojs/mdx": "^0.19.7",
 		"@astrojs/solid-js": "^2.1.1",
 		"@astrojs/tailwind": "^3.1.2",
 		"@fontsource/karla": "^4.5.11",
