--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"prettier": "^2.8.8",
 		"prettier-plugin-astro": "^0.8.0",
 		"prettier-plugin-tailwindcss": "^0.2.8",
-		"sass": "^1.62.1"
+		"sass": "^1.62.1",
+		"tailwindcss-animate": "^1.0.6"
 	}
 }
