--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,33 @@
 {
-	"svg.preview.background": "dark-transparent",
-	"files.associations": {
-		"*.mdx": "markdown"
-	}
+  "svg.preview.background": "dark-transparent",
+  "files.associations": {
+    "*.mdx": "markdown"
+  },
+
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true,
+  "editor.rulers": [100],
+  "editor.tabSize": 2,
+
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "astro",
+    "typescript",
+    "typescriptreact"
+  ],
+  // "eslint.workingDirectories": ["cli", "upgrade", "www"],
+
+  "eslint.rules.customizations": [{ "rule": "*", "severity": "warn" }],
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "mdx.experimentalLanguageServer": true,
+  "prettier.documentSelectors": [
+    "**/*.{cjs,mjs,ts,tsx,astro,md,mdx,json,yaml,yml}"
+  ],
+  "[astro]": {
+    "editor.defaultFormatter": "astro-build.astro-vscode"
+  }
 }
