--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,9 +4,9 @@
     "*.mdx": "markdown"
   },
 
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
-  },
+  // "editor.codeActionsOnSave": {
+  //   "source.fixAll.eslint": true
+  // },
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
   "editor.rulers": [100],
@@ -22,13 +22,13 @@
   // "eslint.rules.customizations": [{ "rule": "*", "severity": "warn" }],
   // "typescript.tsdk": "node_modules/typescript/lib",
   // "mdx.experimentalLanguageServer": true,
-  // "prettier.documentSelectors": [
-  //   "**/*.{cjs,mjs,ts,tsx,astro,md,mdx,json,yaml,yml}"
-  // ],
+  "prettier.documentSelectors": [
+    "**/*.{cjs,mjs,ts,tsx,astro,md,mdx,json,yaml,yml}"
+  ],
   // "[astro]": {
   //   "editor.defaultFormatter": "astro-build.astro-vscode"
   // }
-  "prettier.documentSelectors": ["**/*.astro"],
+  // "prettier.documentSelectors": ["**/*.astro"],
   "[astro]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
