--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
     "eslint": "^8.43.0",
