--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@astrojs/tailwind": "^4.0.0",
     "@fontsource/karla": "^4.5.11",
     "@fontsource/oswald": "^4.5.12",
+    "@kobalte/core": "^0.9.8",
+    "@kobalte/tailwindcss": "^0.6.5",
     "astro": "^2.7.0",
     "sharp": "^0.32.1",
     "solid-js": "^1.7.6",
