--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@kobalte/core": "^0.9.8",
     "@kobalte/tailwindcss": "^0.6.5",
     "astro": "^2.7.0",
+    "clsx": "^1.2.1",
     "sharp": "^0.32.1",
     "solid-js": "^1.7.6",
     "tailwind-scrollbar": "^3.0.4",
