--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/image": "^0.17.1",
     "@astrojs/mdx": "^0.19.7",
     "@astrojs/prefetch": "^0.2.3",
+    "@astrojs/sitemap": "^1.3.3",
     "@astrojs/solid-js": "^2.2.0",
     "@astrojs/tailwind": "^4.0.0",
     "@fontsource/karla": "^4.5.11",
