--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "astro preview",
     "astro": "astro",
     "format": "prettier -w **/*.{cjs,mjs,ts,tsx,astro,md,mdx,json,yaml,yml}",
-    "lint": "eslint . --ext .astro,.js,.ts,.jsx,.tsx",
+    "lint": "eslint . --ext .astro,.js,.ts,.jsx,.tsx,.md,.mdx",
     "inspect": "unlighthouse --config-file unlighthouse.config.ts"
   },
   "dependencies": {
@@ -39,6 +39,7 @@
     "eslint": "^8.43.0",
     "eslint-plugin-astro": "^0.27.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-mdx": "^2.1.0",
     "eslint-plugin-solid": "^0.12.1",
     "prettier": "^2.8.8",
     "prettier-plugin-astro": "^0.10.0",
