--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "plaiceholder": "^3.0.0",
     "sharp": "^0.32.1",
     "solid-js": "^1.7.6",
+    "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "^3.3.2"
   },
