--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "@fontsource/oswald": "^4.5.12",
     "@kobalte/core": "^0.9.8",
     "@kobalte/tailwindcss": "^0.6.5",
+    "@swup/a11y-plugin": "^3.0.0",
+    "@swup/astro": "^0.1.6",
+    "@swup/head-plugin": "^1.3.0",
     "astro": "^2.7.0",
     "astro-robots-txt": "^0.5.0",
     "clsx": "^1.2.1",
     "plaiceholder": "^3.0.0",
     "sharp": "^0.32.1",
     "solid-js": "^1.7.6",
+    "swup": "^3.1.1",
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "^3.3.2"
